1.6 link + square transitions added; link nested in root (clobal + было бы супер выделить транзишны в отдельные css чтобы они тоже каталогизировались (так можно?)); square overflow bug fixed

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,5 +1,6 @@
 .header {
   position: relative;
+  overflow: hidden; /*Фиксим баг от крутящегося квадрата*/
   display: flex;
   height: 100vh;
   min-height: 600px;
